samples/_failures_safe/1761466508_ff274f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3c67fcf.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d3c67fcf.c:155:17: error: expected expression at end of input
  155 |                 dist[v] = dist[u] +
      |                 ^~~~
./samples/SAFE/__tmp_d3c67fcf.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3c67fcf.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3c67fcf.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3c67fcf.c:155:17: error: expected declaration or statement at end of input
